--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ kramdown:
   syntax_highlighter: rouge
   
 mathjax: true
+timezone: Asia/Shanghai
 
 # Exclude from processing.
 # The following items will not be processed, by default.
