--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: oozorakuro409@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   "Make a difference."
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://oozorakuro.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kuro96.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: Kuro96
 
 cdn:
