--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,78 @@
-baseURL: https://blog.kurolatz.xyz/
-languageCode: zh-cn
-title: Kurolatz's Blog
-theme: "PaperMod"
+baseURL: "https://blog.kurolatz.xyz/"
+title: "Kurolatz's Blog"
 paginate: 6
+theme: "PaperMod"
+languageCode: zh-cn
+
+enableRobotsTXT: true
+buildDrafts: false
+buildFuture: false
+buildExpired: false
+
+params:
+  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+  title: "Kurolatz's Blog"
+  description: "ExampleSite description"
+  keywords: [Blog]
+  author: Kurolatz
+  images: ["<link or path of image for opengraph, twitter-cards>"]
+  DateFormat: "January 2, 2006"
+  defaultTheme: auto # dark, light
+  disableThemeToggle: false
+
+  ShowReadingTime: true
+  ShowShareButtons: false
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: false
+  ShowCodeCopyButtons: true
+  ShowWordCount: true
+  ShowRssButtonInSectionTermList: true
+  UseHugoToc: true
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: true
+  tocopen: false
+  assets:
+    disableHLJS: true
+
+  homeInfoParams:
+    # Title: ""
+    # Content: ""
+
+  socialIcons:
+    - name: bilibili
+      url: "https://space.bilibili.com/478081"
+    - name: github
+      url: "https://github.com/Kuro96"
+    - name: steam
+      url: "https://steamcommunity.com/id/kurooz"
+
+  icpBeian: "沪ICP备2023031377号-1"
 
 enableEmoji: true
+
+menu:
+  main:
+    - identifier: categories
+      name: 文章类别
+      url: /categories/
+      weight: 10
+
+pygmentsUseClasses: false
+markup:
+  highlight:
+    # anchorLineNos: true
+    codeFences: true
+    guessSyntax: true
+    lineNos: false
+    # noClasses: false
+    style: monokai
+
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON # necessary for search
